--- a/src/components/Navbar/BurguerBtn/BurguerBtn.module.css
+++ b/src/components/Navbar/BurguerBtn/BurguerBtn.module.css
@@ -86,7 +86,7 @@
 }
 
 .bubble {
-    background-color: var(--blanco);
+    background-color: #eaeef5e3;
     height: 640px;
     width: 640px;
     position: absolute;
